--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"dependencies": {
 		"express": "~4.0.0",
 		"mongoose": "~3.6.13",
-		"body-parser": "~1.0.1"
+		"body-parser": "~1.0.1",
+		"ejs": "*"
 	}
 }
 
